added images folder

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             </div>
             <div class="section profile">
                 <div class="profile-header">
-                    <span><img src="person.png" alt="person image"></span>
+                    <span><img src="/Images/Person.png" alt="person image"></span>
                     <h3>Profile</h3>
                 </div>
                 <p>Former Sales and Marketing professional turned Software Developer with a strong passion for technology and problem-solving. Adaptive, analytical, with a keen eye for detail and excellent interpersonal skills. Thrives in team environments and eager to continue learning and growing in the software development field.</p>
             </div>
             <div class="section skills">
                 <div class="skills-header">
-                    <span><img src="wrench.png" alt="wrench image"></span>
+                    <span><img src="/Images/Wrench.png" alt="wrench image"></span>
                     <h3>Skills</h3>
                 </div>
                 <ul class="skills">
@@ -42,7 +42,7 @@
             </div>
             <div class="section education">
                 <div class="education-header">
-                    <span><img src="school.png" alt="school image"></span>
+                    <span><img src="/Images/School.png" alt="school image"></span>
                     <h3>Education</h3>
                 </div>
                 <p>Tech Elevator Bootcamp – Java Cohort</p>
@@ -50,7 +50,7 @@
             </div>
             <div class="section certifications">
                 <div class="certifications-header">
-                    <span><img src="star.png" alt="certificate image"></span>
+                    <span><img src="/Images/star.png" alt="star image"></span>
                 <h3>Certifications</h3>
                 </div>
                 <ul class="certifications">
